# vess-shape-dataset

./: .gitignore  LICENSE  README.md  create_vessel_shape_with_matte.ipynb  experiments.ipynb  generate_random_curves.ipynb  pyproject.toml  requirements.txt  vessel_geometry.py  vessel_shape.py
Notebooks/: create_vessel_shape.ipynb  experiments.ipynb
imagenet_val_sample/: ILSVRC2012_img_val_annotation.csv
notebooks/: experiments.ipynb
vessel_shape_dataset/: __init__.py  experiments.ipynb  vessel_curves.py  vessel_dataset.py  vessel_shape.py  vessel_texture.py
